--- a/package.json
+++ b/package.json
@@ -7,9 +7,15 @@
     "package": "svelte-kit package",
     "preview": "svelte-kit preview",
     "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-    "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
+    "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
+    "prepare": "npm run smui-theme",
+    "smui-theme": "smui-theme compile static/smui.css -i src/theme"
   },
   "devDependencies": {
+    "@material/typography": "^13.0.0",
+    "@smui/card": "^6.0.0-beta.14",
+    "@smui/paper": "^6.0.0-beta.14",
+    "@smui/textfield": "^6.0.0-beta.14",
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/kit": "next",
     "eslint": "^7.32.0",
@@ -17,6 +23,7 @@
     "eslint-plugin-svelte3": "^3.2.1",
     "prettier": "^2.5.1",
     "prettier-plugin-svelte": "^2.5.0",
+    "smui-theme": "^6.0.0-beta.14",
     "svelte": "^3.44.0"
   },
   "type": "module"
