--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "devDependencies": {
     "@material/typography": "^13.0.0",
     "@smui/card": "^6.0.0-beta.14",
+    "@smui/layout-grid": "^6.0.0-beta.14",
     "@smui/paper": "^6.0.0-beta.14",
+    "@smui/select": "^6.0.0-beta.14",
     "@smui/textfield": "^6.0.0-beta.14",
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/kit": "next",
@@ -23,6 +25,7 @@
     "eslint-plugin-svelte3": "^3.2.1",
     "prettier": "^2.5.1",
     "prettier-plugin-svelte": "^2.5.0",
+    "sanitize-html": "^2.7.0",
     "smui-theme": "^6.0.0-beta.14",
     "svelte": "^3.44.0"
   },
