--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "eslint-plugin-svelte3": "^3.2.1",
     "prettier": "^2.5.1",
     "prettier-plugin-svelte": "^2.5.0",
-    "sanitize-html": "^2.7.0",
     "smui-theme": "^6.0.0-beta.14",
     "svelte": "^3.44.0"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "sanitize-html": "^2.7.0"
+  }
 }
