--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@smui/select": "^6.0.0-beta.14",
     "@smui/textfield": "^6.0.0-beta.14",
     "@sveltejs/adapter-auto": "next",
+    "@sveltejs/adapter-static": "^1.0.0-next.28",
     "@sveltejs/kit": "next",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
